--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "next": "^1.2.3",
-    "react": "^15.4.1"
+    "react": "^15.4.1",
+    "react-helmet": "^3.2.3"
   }
 }
