--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
     "start": "next start"
@@ -12,8 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "^1.2.3",
-    "react": "^15.4.1",
-    "react-helmet": "^3.2.3"
+    "classnames": "^2.2.6",
+    "next": "^9.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0"
   }
 }
